Se definen las funciones del back-end de los botónes en la página de trabajadores

--- a/templates/index.html
+++ b/templates/index.html
@@ -319,7 +319,7 @@
                         <div class="row mb-3">
                             <div class="col-xl-4">
                                 <label for="add-name" class="form-label">Nombre - Marca</label>
-                                <input type="text" class="form-control" id="add-name" name="name" placeholder="ej. Marcador - Pelikan" required>
+                                <input type="text" class="form-control" id="add-name" name="name" placeholder="ej: Marcador - Pelikan" required>
                             </div>
                             <div class="col-xl-1">
                                 <label for="add-quantity" class="form-label">Cantidad</label>
