--- a/templates/inactive.html
+++ b/templates/inactive.html
@@ -36,8 +36,14 @@
                             <li><a class="dropdown-item" href="{{ url_for('history') }}">Historial</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('workers') }}">Trabajadores</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Trabajadores
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('workers') }}">Lista</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('inactive_workers') }}">Inactivos</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <form class="d-flex ms-auto" role="search">
@@ -96,13 +102,15 @@
                     <div class="modal-body">
                         <input type="hidden" name="id" id="activate-id">
                         <p>¿Está seguro de que desea activar nuevamente <strong id="activate-name"></strong> en el inventario?</p>
-                        <div class="container worker">
+                    </div>
+                    <div class="modal-footer">
+                        <div class="row justify-content-center">
                             <div class="mb-3">
                                 <label for="activate-worker" class="form-label">Responsable</label>
                                 <select class="form-select" id="activate-worker" name="worker" required>
                                     <option selected value="">Seleccione una opción</option>
                                     {% for worker in workers %}
-                                        <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -111,8 +119,6 @@
                                 <textarea class="form-control" id="activate-comment" name="comment" placeholder="Agregue una descripción de la edición si es necesario"></textarea>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                         <button type="submit" class="btn btn-success">Aceptar</button>
                     </div>
