--- a/templates/inactive_workers.html
+++ b/templates/inactive_workers.html
@@ -54,7 +54,7 @@
 
     <!-- Tabla de trabajadores -->
     <div class="table-responsive">
-        <table class="table table-striped table-hover align-middle" id="workers-table">
+        <table class="table table-striped table-hover align-middle" id="inactive_workers-table">
             <thead class="table-secondary">
                 <tr>
                     <th>Id</th>
