--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@
                 <tr>
                     <th>Editar</th>
                     <th>Insumo</th>
+                    <th>Detalles</th>
                     <th>Estado</th>
                     <th>Cantidad</th>
                     <th>In/Out</th>
@@ -85,6 +86,7 @@
                             </button>
                         </td>
                         <td>{{ item.nombre }}</td>
+                        <td>{{ item.detalles }}</td>
                         <td>
                             <span class="badge text-bg-{{ item.estado }}">
                                 {{ "OK" if item.estado == 'success' 
